
[tool.poetry]
name = "mplfonts"
version = "0.0.10"
description = "Fonts manager for matplotlib"
authors = ["Wentao Li <clarmyleewt@outlook.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Clarmy/mplfonts"
repository = "https://github.com/Clarmy/mplfonts"
keywords = ["matplotlib", "fonts", "manager"]

[tool.poetry.dependencies]
python = ">=3.9"
fire = ">=0.4.0"
fontmeta = ">=1.6.1"
matplotlib = ">=3.4"
numpy = ">=1.26.0"

[tool.poetry.dev-dependencies]
# Add any development dependencies here

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools>=67.6.0", "wheel"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
mplfonts = "mplfonts.bin.cli:cli"
